Added all main functions

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="https://assets-global.website-files.com/6030eb20edb26744961d31ee/61a83a4a9bc108441bd34a50_android-chrome-256x256.png">
+    <title> Respond.io | Kanban</title>
   </head>
   <body>
     <noscript>
